# pico-examples

./: .gitignore  README.md
01_blink/: CMakeLists.txt  run
01_blink/src/: blink.c
01_hello_pico/: CMakeLists.txt  run
01_hello_pico/src/: hello.c
02_hello_serial/: CMakeLists.txt
02_hello_serial/src/: hello.c
03_data_types/: CMakeLists.txt  result.txt  run
03_data_types/src/: datatypes.c
